src/main/java/org/openrewrite/mainframe/jcl/internal/grammar/JCLParser.java
/*
 * Copyright 2026 the original author or authors.
 * <p>
 * Licensed under the Moderne Source Available License (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * <p>
 * https://docs.moderne.io/licensing/moderne-source-available-license
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// Generated from /Users/jon/Projects/github/openrewrite/rewrite-cobol/.claude/worktrees/ims-or-cics/src/main/antlr-jcl/JCLParser.g4 by ANTLR 4.13.2
package org.openrewrite.mainframe.jcl.internal.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JCLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		UTF_8_BOM=1, WS=2, EOL=3, JCL_STATEMENT=4, JCL_CONTINUATION=5, JCL_STREAM_END=6, 
		JCL_STREAM=7, JES2=8, JES3=9, CM=10, COMMENT=11, UNKNOWN=12, CA_START=13, 
		STRINGLITERAL=14, TEXT=15, JCL_TC_START=16, JCL_TC_STOP=17, JCL_STRINGLITERAL=18, 
		JCL_TEXT=19, STREAM_WS=20, STREAM_STRINGLITERAL=21, STREAM_TEXT=22, JES2_STRINGLITERAL=23, 
		JES2_TEXT=24, JES3_STRINGLITERAL=25, JES3_TEXT=26, CM_STRINGLITERAL=27, 
		CM_TEXT=28, COMMENT_WS=29, COMMENT_STRINGLITERAL=30, COMMENT_TEXT=31, 
		UNKNOWN_WS=32, UNKNOWN_STRINGLITERAL=33, UNKNOWN_TEXT=34;
	public static final int
		RULE_compilationUnit = 0, RULE_statement = 1, RULE_jcl = 2, RULE_jclWord = 3, 
		RULE_jclTrailingComment = 4, RULE_jes2 = 5, RULE_jes2Word = 6, RULE_jes3 = 7, 
		RULE_jes3Word = 8, RULE_stream = 9, RULE_streamWord = 10, RULE_controlM = 11, 
		RULE_controlMWord = 12, RULE_comment = 13, RULE_commentWord = 14, RULE_unknown = 15, 
		RULE_unknownWord = 16, RULE_commentArea = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "statement", "jcl", "jclWord", "jclTrailingComment", 
			"jes2", "jes2Word", "jes3", "jes3Word", "stream", "streamWord", "controlM", 
			"controlMWord", "comment", "commentWord", "unknown", "unknownWord", "commentArea"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\uFEFF'", null, null, null, null, null, "'^^STREAM^^'", null, 
			null, "'^^CM^^'", "'^^COMMENT^^'", "'^^UNKNOWN^^'", null, null, null, 
			"'^^TC_START^^'", "'^^TC_STOP^^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "UTF_8_BOM", "WS", "EOL", "JCL_STATEMENT", "JCL_CONTINUATION", 
			"JCL_STREAM_END", "JCL_STREAM", "JES2", "JES3", "CM", "COMMENT", "UNKNOWN", 
			"CA_START", "STRINGLITERAL", "TEXT", "JCL_TC_START", "JCL_TC_STOP", "JCL_STRINGLITERAL", 
			"JCL_TEXT", "STREAM_WS", "STREAM_STRINGLITERAL", "STREAM_TEXT", "JES2_STRINGLITERAL", 
			"JES2_TEXT", "JES3_STRINGLITERAL", "JES3_TEXT", "CM_STRINGLITERAL", "CM_TEXT", 
			"COMMENT_WS", "COMMENT_STRINGLITERAL", "COMMENT_TEXT", "UNKNOWN_WS", 
			"UNKNOWN_STRINGLITERAL", "UNKNOWN_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JCLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JCLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JCLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 29526597632L) != 0)) {
				{
				{
				setState(36);
				statement();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(42);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public JclContext jcl() {
			return getRuleContext(JclContext.class,0);
		}
		public Jes2Context jes2() {
			return getRuleContext(Jes2Context.class,0);
		}
		public Jes3Context jes3() {
			return getRuleContext(Jes3Context.class,0);
		}
		public StreamContext stream() {
			return getRuleContext(StreamContext.class,0);
		}
		public ControlMContext controlM() {
			return getRuleContext(ControlMContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public UnknownContext unknown() {
			return getRuleContext(UnknownContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case JCL_STRINGLITERAL:
			case JCL_TEXT:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				jcl();
				}
				break;
			case JES2_STRINGLITERAL:
			case JES2_TEXT:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				jes2();
				}
				break;
			case JES3_STRINGLITERAL:
			case JES3_TEXT:
				enterOuterAlt(_localctx, 3);
				{
				setState(46);
				jes3();
				}
				break;
			case STREAM_STRINGLITERAL:
			case STREAM_TEXT:
				enterOuterAlt(_localctx, 4);
				{
				setState(47);
				stream();
				}
				break;
			case CM_STRINGLITERAL:
			case CM_TEXT:
				enterOuterAlt(_localctx, 5);
				{
				setState(48);
				controlM();
				}
				break;
			case COMMENT_STRINGLITERAL:
			case COMMENT_TEXT:
				enterOuterAlt(_localctx, 6);
				{
				setState(49);
				comment();
				}
				break;
			case CA_START:
			case UNKNOWN_STRINGLITERAL:
			case UNKNOWN_TEXT:
				enterOuterAlt(_localctx, 7);
				{
				setState(50);
				unknown();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JclContext extends ParserRuleContext {
		public JclWordContext jclWord() {
			return getRuleContext(JclWordContext.class,0);
		}
		public JclTrailingCommentContext jclTrailingComment() {
			return getRuleContext(JclTrailingCommentContext.class,0);
		}
		public JclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterJcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitJcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitJcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JclContext jcl() throws RecognitionException {
		JclContext _localctx = new JclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jcl);
		try {
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				jclWord();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				jclTrailingComment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JclWordContext extends ParserRuleContext {
		public TerminalNode JCL_TEXT() { return getToken(JCLParser.JCL_TEXT, 0); }
		public TerminalNode JCL_STRINGLITERAL() { return getToken(JCLParser.JCL_STRINGLITERAL, 0); }
		public CommentAreaContext commentArea() {
			return getRuleContext(CommentAreaContext.class,0);
		}
		public JclWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jclWord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterJclWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitJclWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitJclWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JclWordContext jclWord() throws RecognitionException {
		JclWordContext _localctx = new JclWordContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_jclWord);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_la = _input.LA(1);
			if ( !(_la==JCL_STRINGLITERAL || _la==JCL_TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(58);
				commentArea();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JclTrailingCommentContext extends ParserRuleContext {
		public List<JclWordContext> jclWord() {
			return getRuleContexts(JclWordContext.class);
		}
		public JclWordContext jclWord(int i) {
			return getRuleContext(JclWordContext.class,i);
		}
		public TerminalNode JCL_TC_START() { return getToken(JCLParser.JCL_TC_START, 0); }
		public TerminalNode JCL_TC_STOP() { return getToken(JCLParser.JCL_TC_STOP, 0); }
		public CommentAreaContext commentArea() {
			return getRuleContext(CommentAreaContext.class,0);
		}
		public JclTrailingCommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jclTrailingComment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterJclTrailingComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitJclTrailingComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitJclTrailingComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JclTrailingCommentContext jclTrailingComment() throws RecognitionException {
		JclTrailingCommentContext _localctx = new JclTrailingCommentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_jclTrailingComment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			jclWord();
			setState(62);
			match(JCL_TC_START);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==JCL_STRINGLITERAL || _la==JCL_TEXT) {
				{
				{
				setState(63);
				jclWord();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(JCL_TC_STOP);
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(70);
				commentArea();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Jes2Context extends ParserRuleContext {
		public Jes2WordContext jes2Word() {
			return getRuleContext(Jes2WordContext.class,0);
		}
		public Jes2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jes2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterJes2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitJes2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitJes2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Jes2Context jes2() throws RecognitionException {
		Jes2Context _localctx = new Jes2Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_jes2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			jes2Word();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Jes2WordContext extends ParserRuleContext {
		public TerminalNode JES2_TEXT() { return getToken(JCLParser.JES2_TEXT, 0); }
		public TerminalNode JES2_STRINGLITERAL() { return getToken(JCLParser.JES2_STRINGLITERAL, 0); }
		public CommentAreaContext commentArea() {
			return getRuleContext(CommentAreaContext.class,0);
		}
		public Jes2WordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jes2Word; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterJes2Word(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitJes2Word(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitJes2Word(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Jes2WordContext jes2Word() throws RecognitionException {
		Jes2WordContext _localctx = new Jes2WordContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jes2Word);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if ( !(_la==JES2_STRINGLITERAL || _la==JES2_TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(76);
				commentArea();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Jes3Context extends ParserRuleContext {
		public Jes3WordContext jes3Word() {
			return getRuleContext(Jes3WordContext.class,0);
		}
		public Jes3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jes3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterJes3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitJes3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitJes3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Jes3Context jes3() throws RecognitionException {
		Jes3Context _localctx = new Jes3Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_jes3);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			jes3Word();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Jes3WordContext extends ParserRuleContext {
		public TerminalNode JES3_TEXT() { return getToken(JCLParser.JES3_TEXT, 0); }
		public TerminalNode JES3_STRINGLITERAL() { return getToken(JCLParser.JES3_STRINGLITERAL, 0); }
		public CommentAreaContext commentArea() {
			return getRuleContext(CommentAreaContext.class,0);
		}
		public Jes3WordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jes3Word; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterJes3Word(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitJes3Word(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitJes3Word(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Jes3WordContext jes3Word() throws RecognitionException {
		Jes3WordContext _localctx = new Jes3WordContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_jes3Word);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_la = _input.LA(1);
			if ( !(_la==JES3_STRINGLITERAL || _la==JES3_TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(82);
				commentArea();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StreamContext extends ParserRuleContext {
		public StreamWordContext streamWord() {
			return getRuleContext(StreamWordContext.class,0);
		}
		public StreamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stream; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterStream(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitStream(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitStream(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StreamContext stream() throws RecognitionException {
		StreamContext _localctx = new StreamContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stream);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			streamWord();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StreamWordContext extends ParserRuleContext {
		public TerminalNode STREAM_TEXT() { return getToken(JCLParser.STREAM_TEXT, 0); }
		public TerminalNode STREAM_STRINGLITERAL() { return getToken(JCLParser.STREAM_STRINGLITERAL, 0); }
		public CommentAreaContext commentArea() {
			return getRuleContext(CommentAreaContext.class,0);
		}
		public StreamWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_streamWord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterStreamWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitStreamWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitStreamWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StreamWordContext streamWord() throws RecognitionException {
		StreamWordContext _localctx = new StreamWordContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_streamWord);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !(_la==STREAM_STRINGLITERAL || _la==STREAM_TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(88);
				commentArea();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ControlMContext extends ParserRuleContext {
		public ControlMWordContext controlMWord() {
			return getRuleContext(ControlMWordContext.class,0);
		}
		public ControlMContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlM; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterControlM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitControlM(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitControlM(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlMContext controlM() throws RecognitionException {
		ControlMContext _localctx = new ControlMContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_controlM);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			controlMWord();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ControlMWordContext extends ParserRuleContext {
		public TerminalNode CM_TEXT() { return getToken(JCLParser.CM_TEXT, 0); }
		public TerminalNode CM_STRINGLITERAL() { return getToken(JCLParser.CM_STRINGLITERAL, 0); }
		public CommentAreaContext commentArea() {
			return getRuleContext(CommentAreaContext.class,0);
		}
		public ControlMWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlMWord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).enterControlMWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLParserListener ) ((JCLParserListener)listener).exitControlMWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLParserVisitor ) return ((JCLParserVisitor<? extends T>)visitor).visitControlMWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlMWordContext controlMWord() throws RecognitionException {
		ControlMWordContext _localctx = new ControlMWordContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_controlMWord);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !(_la==CM_STRINGLITERAL || _la==CM_TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(94);
				commentArea();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
